--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -62,7 +62,9 @@ permalink: /apartment.html
     <br>
     Address: <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE,%20TACOMA">502 N YAKIMA AVE, TACOMA</a></p>
     <br>
-    John Buffelen was born in the Netherlands in 1862 and came first to Milwaukie and then to Tacoma while working in the lumber industry. Buffelen became a central figure in industrial lumber manufacturing in Tacoma's tide flats area, with his corporations the Buffelen Lumber & Manufacturing Co., the Buffelen-Hubert Furniture Co. and the American Wood Pipe Co. in addition to constructing several apartment buildings in the city. Buffelen attracted press later in life from funding multiple failed attempts to cross the Pacific by plane. 
+    John Buffelen was born in the Netherlands in 1862 and came first to Milwaukie and then to Tacoma while working in the lumber industry. 
+    Buffelen became a central figure in industrial lumber manufacturing in Tacoma's tide flats area, with his corporations the Buffelen Lumber & Manufacturing Co., the Buffelen-Hubert Furniture Co. and the American Wood Pipe Co. 
+    In addition to constructing several apartment buildings in the city. Buffelen attracted press later in life from funding multiple failed attempts to cross the Pacific by plane. 
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -74,7 +76,9 @@ permalink: /apartment.html
     <br>
   </div>
   <div class="column left" style="background-color:#FFFFFF;">
-    <p>Series comprises four blueprints for a proposed apartment building for industrialist John Buffelen designed by Tacoma area architect George L. Ekvall. The stucco building is three stories with a basement, attic space and spanish tile roof. The building was located at the west corner of 5th and Yakima Street, which was located caddy corner from the Buffelen residence at 509 North Yakima St. currently occupied by the Vista Palms Apartments.</p>
+    <p>Series comprises four blueprints for a proposed apartment building for industrialist John Buffelen designed by Tacoma area architect <a href="https://aweymo.github.io/losttacoma/ekvall.html">George L. Ekvall</a>. 
+      The stucco building is three stories with a basement, attic space and spanish tile roof. The building was located at the west corner of 5th and Yakima Street, which was located caddy corner from the Buffelen residence at 509 North Yakima St. 
+      currently occupied by the Vista Palms Apartments.</p>
     <br>  
     <p>Technical Drawings: 
     <br>
