--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -62,7 +62,9 @@ permalink: /arlington.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">3002 S 72ND ST, TACOMA</a></p>
       <br>
-      <p>One of 32 technical drawings created for this property by Hill Mock & Griffin on April 18, 1924. These records appear to be rejected plans for the school during the bidding process.</p>
+      <p>One of 32 technical drawings created for this property by <a href="https://aweymo.github.io/losttacoma/hill.html">Hill</a> <a href="https://aweymo.github.io/losttacoma/mock.html">Mock</a> 
+        & <a href="https://aweymo.github.io/losttacoma/griffin.html">Griffin</a> on April 18, 1924. 
+        These records appear to be rejected plans for the school during the bidding process.</p>
       <br>
       <p>Technical Drawings: 
         <br>
