--- a/pages/roosevelt.html
+++ b/pages/roosevelt.html
@@ -62,7 +62,8 @@ permalink: /roosevelt.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">3550 E ROOSEVELT AVE, TACOMA</a></p>
       <br>
-      <p>One of eighteen technical drawings for the Roosevelt School, created on July 8, 1921 by Hill, Mock and Griffin. 
+      <p>One of eighteen technical drawings for the Roosevelt School, created on July 8, 1921 by <a href="https://aweymo.github.io/losttacoma/hill.html">Hill</a> <a href="https://aweymo.github.io/losttacoma/mock.html">Mock</a> 
+        & <a href="https://aweymo.github.io/losttacoma/griffin.html">Griffin</a>. 
         After acts of arson, vandalism and identification of structural deficiencies which led to the gymnasium collapsing, the structure was demolished in 1986.</p>
       <br>
       <p>Technical Drawings: 
