--- a/pages/ch.html
+++ b/pages/ch.html
@@ -62,7 +62,7 @@ permalink: /ch.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24%20BROADWAY%2C%20TACOMA">1502-24 BROADWAY, TACOMA</a></p>
       <br>
-      <p>Eight technical drawings for a proposed but unbuilt City Hall building, created by George Ekvall on February, 1937. Public Utilities Commissioner Ira S. Davisson requested the plans but they were rejected by the City Council three months later.</p>
+      <p>Eight technical drawings for a proposed but unbuilt City Hall building, created by <a href="https://aweymo.github.io/losttacoma/ekvall.html">George L. Ekvall</a> on February, 1937. Public Utilities Commissioner Ira S. Davisson requested the plans but they were rejected by the City Council three months later.</p>
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
