--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -62,8 +62,8 @@ permalink: /comfort.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#625%20COMMERCE%20ST%2C%20TACOMA">625 COMMERCE ST, TACOMA</a></p>
       <br>
-      <p>Three of eight technical drawings for a proposed but unbuilt Comfort Station for Women, created by Wilbur C. Raleigh on October, 1910. The design places the restroom on the south 7th street side of the Old City Hall building, with a small, covered doorway leading underground to the facilities. 
-      <br>  
+      <p>Three of eight technical drawings for a proposed but unbuilt Comfort Station for Women, created by <a href="https://aweymo.github.io/losttacoma/raleigh.html">Wilbur C. RaleighA</a> on October, 1910. 
+      The design places the restroom on the south 7th street side of the Old City Hall building, with a small, covered doorway leading underground to the facilities. 
       Wilbur C. Raleigh also designed the Shops and Stables building and acted as supervising engineer for the construction of the Murray Morgan and Puyallup River Bridges.</p>
       <br>
       <p>Technical Drawings: 
