--- a/pages/coolers.html
+++ b/pages/coolers.html
@@ -62,7 +62,7 @@ permalink: /coolers.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
-      <p>One of 16 available technical drawings created for the Carsten Packing Company, created by P.V. Cornils, the company's in-house architect, circa 1922.</p>
+      <p>One of 16 available technical drawings created for the Carsten Packing Company, created by <a href="https://aweymo.github.io/losttacoma/cornils.html">P.V. Cornils</a>, the company's in-house architect, circa 1922.</p>
       <br>
       <p>Technical Drawings: 
       <br>
