--- a/pages/pork.html
+++ b/pages/pork.html
@@ -62,7 +62,7 @@ permalink: /pork.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA">1623 E J ST, TACOMA</a></p>
       <br>
-      <p>One of 18 available technical drawings for the Carsten Packing Company, created by P.V. Cornils, in-house architect for the company, circa 1922.</p>
+      <p>One of 18 available technical drawings for the Carsten Packing Company, created by <a href="https://aweymo.github.io/losttacoma/cornils.html">P.V. Cornils</a>, in-house architect for the company, circa 1922.</p>
       <br>
       <p>Technical Drawings: 
       <br>
