--- a/pages/defiance.html
+++ b/pages/defiance.html
@@ -62,7 +62,8 @@ permalink: /defiance.html
       <br>
      Address: <a href="https://aweymo.github.io/losttacoma/browse.html#5912%20N%20WATERFRONT%20DR.%20TACOMA">5912 N WATERFRONT DR. TACOMA</a></p>
       <br>
-      <p>Twenty three technical drawings for the Point Defiance Pavilion, created by A.J. Russell and Earl N. Dugan submitted in a series of "units" over 5/6/1919, 2/22/1921 and 3/22/1925. 
+      <p>Twenty three technical drawings for the Point Defiance Pavilion, created by <a href="https://aweymo.github.io/losttacoma/russell.html">A.J. Russell</a>
+      and <a href="https://aweymo.github.io/losttacoma/dugan.html">Earl N. Dugan</a> submitted in a series of "units" over 5/6/1919, 2/22/1921 and 3/22/1925. 
       <br>  
       While the name Point Defiance Pavilion sometimes refers to the octagonal structure on what is now the Point Defiance Marina, these plans refer to the structure closer to the water which often took the same name. 
       <br>
@@ -131,9 +132,9 @@ permalink: /defiance.html
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_01" alt="Point Defiance Pavilion Overhead" style="max-width:100%;"></a>
     <br>
-    <sub>Point Defiance Pavilion 
+    <sub>Point Defiance Pavilion Overhead
     <br>  
     Richards Studio (D7207-6), 04-24-1938 
     <br>
