--- a/pages/donnelly.html
+++ b/pages/donnelly.html
@@ -62,7 +62,9 @@ permalink: /donnelly.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#742-50%20PACIFIC%20AVE%2C%20TACOMA">742-50 PACIFIC AVE, TACOMA</a></p>
       <br>
-      <p>One of 24 technical drawings for a proposed rebuilding of the Donnelly Hotel by Dugan, Sutton and Whitney in 1922. The Hotel originally opened in 1897 and was demolished in 1925.</p>
+      <p>One of 24 technical drawings for a proposed rebuilding of the Donnelly Hotel by <a href="https://aweymo.github.io/losttacoma/dugan.html">Dugan</a>, 
+        <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a> 
+        in 1922. The Hotel originally opened in 1897 and was demolished in 1925.</p>
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
