--- a/pages/lawrence.html
+++ b/pages/lawrence.html
@@ -62,7 +62,9 @@ permalink: /lawrence.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt054">1009-15 A ST, TACOMA</a></p>
       <br>
-      <p>One of 24 technical drawings created by Earl N. Dugan, Albert Sutton and Harrison Allen Whitney for a 1926 remodel and expansion on the structure, which had been extant since 1892. The Lawrence Block was demolished in 1956 to for the construction of a 12 story Weyerhaeuser building.</p>
+      <p>One of 24 technical drawings created by <a href="https://aweymo.github.io/losttacoma/dugan.html">Dugan</a>, 
+      <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a>  for a 1926 remodel and expansion on the structure, which had been extant since 1892. 
+      The Lawrence Block was demolished in 1956 to for the construction of a 12 story Weyerhaeuser building.</p>
       <br>
       <p>Technical Drawings: 
         <br>
