--- a/pages/sabh.html
+++ b/pages/sabh.html
@@ -62,7 +62,7 @@ permalink: /sabh.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04%20PACIFIC%20AVE%2C%20TACOMA">1102-04 PACIFIC AVE, TACOMA</a></p>
       <br>
-      <p>Two of 59 technical drawings created by Sutton & Whitney on December, 29, 1920. 
+      <p>Two of 59 technical drawings created by <a href="https://aweymo.github.io/losttacoma/sutton.html">Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a> on December, 29, 1920. 
       The Scandinavian American Bank Hotel was a partially constructed but never completed building intended to be on the lot that the Pacific Savings and Loan building would occupy two years after the creation of these drawings.</p>
       <br>
       <p>Technical Drawings: 
