--- a/pages/visitation.html
+++ b/pages/visitation.html
@@ -62,7 +62,7 @@ permalink: /visitation.html
       <br>
       Address: not specified</p>
       <br>
-      <p>One of two technical drawings for a Catholic Visitation Academy was proposed but unbuilt, created by Earl Dugan on December 28, 1945.</p>
+      <p>One of two technical drawings for a Catholic Visitation Academy was proposed but unbuilt, created by <a href="https://aweymo.github.io/losttacoma/dugan.html">Earl N. Dugan</a> on December 28, 1945.</p>
       <br>
       <p>Technical Drawings: 
         <br>
