--- a/pages/waist.html
+++ b/pages/waist.html
@@ -62,7 +62,8 @@ permalink: /waist.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA">934-36 BROADWAY, TACOMA</a></p>
       <br>
-      <p>Eight technical drawing of architectural alterations for the New York Waist House, created by Sutton & Whitney on September 24, 1919. 
+      <p>Eight technical drawing of architectural alterations for the New York Waist House, created by 
+        <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a>  on September 24, 1919. 
         The address is a part of the Wheeler building, which was constructed in 1890. The space was originally occupied by the Sherman, Clay and Co. which opened in 1906. 
         The New York Waist House was a tailoring and alterations shop managed by Ernest Simon. The structure was demolished in 1925.</p>
       <br>
