--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -62,7 +62,8 @@ permalink: /hardware.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">922-24 PACIFIC AVE, TACOMA</a></p>
       <br>
-      <p>One of 39 technical drawings for a remodel of the Washington Hardware Building, created by Sutton, Whitney and Dugan on July 8, 1927. When the building was originally constructed in 1884, it was known as the Peter Irving building. The building was demolished in 1964.</p>
+      <p>One of 39 technical drawings for a remodel of the Washington Hardware Building, created by <a href="https://aweymo.github.io/losttacoma/dugan.html">Dugan</a>, 
+        <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a>  on July 8, 1927. When the building was originally constructed in 1884, it was known as the Peter Irving building. The building was demolished in 1964.</p>
       <br>
       <p>Technical Drawings: 
         <br>
