--- a/pages/edison.html
+++ b/pages/edison.html
@@ -62,7 +62,7 @@ permalink: /edison.html
       <br>
      Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">3102 S 59TH ST, TACOMA</a></p>
       <br>
-      <p>One of 14 technical drawings for the Edison School Annex, created by Frederick Henry Heath on March 28, 1910. 
+      <p>One of 14 technical drawings for the Edison School Annex, created by <a href="https://aweymo.github.io/losttacoma/heath.html">Frederick Henry Heath</a> on March 28, 1910. 
       Renamed in 1912 to the Barlow Annex after South Tacoma community activist Orin Watts Barlow. The structure was demolished in 2011.</p>
       <br>
       </div>
@@ -80,9 +80,7 @@ permalink: /edison.html
       <br>
       <sub>Orin Watts Barlow
       <br>   
-      Men of the Pacific Coast, Containing Portraits and Biographies of the Professional,
-      <br>  
-      Financial and Business Men of California, Oregon and Washington. 1902-1903.
+      <i>Men of the Pacific Coast, Containing Portraits and Biographies of the Professional, Financial and Business Men of California, Oregon and Washington. 1902-1903.</i>
       <br> 
       San Francisco, Pacific Art Co., 1903.</sub>
       <br>
