--- a/pages/garage.html
+++ b/pages/garage.html
@@ -62,7 +62,7 @@ permalink: /garage.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">621 PACIFIC AVE, TACOMA</a></p>
       <br>
-      <p>One of 10 technical drawings created by Harry E. Flickinger on July 1929 for the City of Tacoma. The jail was an addition to the south wing of the City Hall Annex. The structure was eventually demolished in April 1974.</p>
+      <p>One of 10 technical drawings created by <a href="https://aweymo.github.io/losttacoma/flickinger.html">Harry E. Flickinger</a> on July 1929 for the City of Tacoma. The jail was an addition to the south wing of the City Hall Annex. The structure was eventually demolished in April 1974.</p>
       <br>
       <p>Technical Drawings: 
         <br>
