--- a/pages/mission.html
+++ b/pages/mission.html
@@ -62,7 +62,7 @@ permalink: /mission.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt055">4801-05 YAKIMA AVE S, TACOMA</a></p>
       <br>
-      <p>One of 20 technical drawings for the Mission Theater, created by Arthur J. Bachelor on February 15, 1924. 
+      <p>One of 20 technical drawings for the Mission Theater, created by <a href="https://aweymo.github.io/losttacoma/bachelor.html">Arthur J. Bachelor</a> on February 15, 1924. 
       The theater opened in June 1924, changed its name to the Victory Theater in December of that same year and to the Capitol Theater in 1951. The structure was demolished in 1973.</p>
       <br>
       <p>Technical Drawings: 
