--- a/pages/mottau.html
+++ b/pages/mottau.html
@@ -62,7 +62,7 @@ permalink: /mottau.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt056">1102-04 MARTIN LUTHER KING JR WAY, TACOMA</a></p>
       <br>
-      <p>One of eight technical drawings for the Mottau Building, created by Gaston C. Lance and Ambrose J. Russell on June 20, 1933. 
+      <p>One of eight technical drawings for the Mottau Building, created by <a href="https://aweymo.github.io/losttacoma/lance.html">Gaston C. Lance</a> and <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> on June 20, 1933. 
         Mrs. Robert Mottau was the builder of this structure, whose occupants included the Totem Food Store, K Street Pharmacy and Paulson's Radio and Appliances. The building was demolished in 2000.</p>
       <br>
       <p>Technical Drawings: 
@@ -74,7 +74,7 @@ permalink: /mottau.html
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
     <br>
-    <sub>Mottau Building, 
+    <sub>Mottau Building
     <br>   
     Historic Property Inventory Forms (BU-3659), 06-30-1993
     <br>  
