--- a/pages/npba.html
+++ b/pages/npba.html
@@ -62,7 +62,7 @@ permalink: /npba.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#801%20E%20WRIGHT%20AVE%2C%20TACOMA">801 E WRIGHT AVE, TACOMA</a></p>
       <br>
-      <p>Two of 18 technical drawings created by St. Paul, Minnesota's Lambert Bassindale firm for alterations to the Northern Pacific Beneficial Association Hospital on March 12, 1923. The building was constructed in 1904 and demolished in 1973.</p>
+      <p>Two of 18 technical drawings created by St. Paul, Minnesota's <a href="https://aweymo.github.io/losttacoma/bassindale.html">Lambert Bassindale</a> firm for alterations to the Northern Pacific Beneficial Association Hospital on March 12, 1923. The building was constructed in 1904 and demolished in 1973.</p>
       <br>
       <p>Technical Drawings: 
         <br>
@@ -75,7 +75,9 @@ permalink: /npba.html
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_npba" alt="N.P.B.A. Hospital" style="max-width:100%;"></a>
       <br>
-      <sub>N.P.B.A. Hospital, TPL Historic Building Files (BU-10396), 
+      <sub>N.P.B.A. Hospital
+      <br>  
+      TPL Historic Building Files (BU-10396) 
       <br>  
       Courtesy Northwest Room</sub>
     </div>
