--- a/pages/sperry.html
+++ b/pages/sperry.html
@@ -62,7 +62,8 @@ permalink: /sperry.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#3%20SCHUSTER%20PARKWAY%2C%20TACOMA">3 SCHUSTER PARKWAY, TACOMA</a></p>
       <br>
-      <p>Two of 28 technical drawings of a grain elevator for the Sperry Flour Company, created by Maurice C. Couchot on February, 16, 1918. The original Sperry Building was built in 1911 and was demolished in 1973.</p>
+      <p>Two of 28 technical drawings of a grain elevator for the Sperry Flour Company, created by <a href="https://aweymo.github.io/losttacoma/couchot.html">Maurice C. Couchot</a> on February, 16, 1918. 
+        The original Sperry Building was built in 1911 and was demolished in 1973.</p>
       <br>
       <p>Technical Drawings: 
         <br>
