--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -91,11 +91,18 @@ permalink: /whitney.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04%20PACIFIC%20AVE%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_sabh.jpeg" alt="Scandinavian American Bank Hotel under construction" style="max-width:100%;"></a>
+      <br>
+      <sub>Scandinavian American Bank Hotel under construction
+      <br>  
+      Photo by Richards Studio (D8652-33), 1920-03-31
+      <br>  
+     Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
     <br>
-    <sub>New York Waist House, 
+    <sub>New York Waist House 
     <br>  
     TPL Historic Building Files (BU-12524), 05-04-1927
     <br>
