--- a/pages/gove.html
+++ b/pages/gove.html
@@ -70,8 +70,6 @@ permalink: /gove.html
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/17963/rec/5">South Tacoma Library Branch #1, Tacoma, WA, (1911)</a> </p>
     <br>
-    <sub>Sources: “PCAD - George Gove.”, “Tribune (Published as THE NEWS TRIBUNE) - August 31, 1956 - Page 13,”, “The Tacoma Daily News - July 23, 1910 - Page 4,”, “The Tacoma Daily Ledger - January 1, 1913”, “The Tacoma Times - February 12, 1913”</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_gove.jpeg" alt="George Gove" style="max-width:100%;"></a>
@@ -80,13 +78,18 @@ permalink: /gove.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-  </div>
-  <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13 MARKET ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_hawthorne.jpeg" alt="Hawthorne School" style="max-width:100%;"></a>
     <br>
-    <sub>Hawthorne School, TPL General Collection (TPL-2868), c.a. 1913, 
+    <sub>Hawthorne School
+    <br>  
+    TPL General Collection (TPL-2868), c.a. 1913
     <br> 
     Courtesy Northwest Room</sub>
+    <br>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <br>
+    <sub>Sources: “PCAD - George Gove.”, “Tribune (Published as THE NEWS TRIBUNE) - August 31, 1956 - Page 13,”, “The Tacoma Daily News - July 23, 1910 - Page 4,”, “The Tacoma Daily Ledger - January 1, 1913”, “The Tacoma Times - February 12, 1913”</sub>
     <br>
   </div>
 </div>
