--- a/pages/babcock.html
+++ b/pages/babcock.html
@@ -61,7 +61,8 @@ permalink: /babcock.html
     <br>
     <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
     <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
+    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> as Russell & Babcock. 
+    In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
     <br>
     <p>Other Work: 
     <br>
