--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -61,7 +61,8 @@ permalink: /couchot.html
     <br>
     <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#3 SCHUSTER PARKWAY, TACOMA">Sperry Flour Company Elevator</a></p>
     <br>
-    <p>Maurice C. Couchot was an architect and engineer from San Francisco that was inspired to become a pioneer of reinforced concrete building methods after experiencing the devastation of the 1906 earthquake. Couchot was the company engineer for Sperry Flour and contributed industrial plans for structures in California and Washington.</p>
+    <p>Maurice C. Couchot was an architect and engineer from San Francisco that was inspired to become a pioneer of reinforced concrete building methods after experiencing the devastation of the 1906 earthquake. 
+      Couchot was the company engineer for Sperry Flour and contributed industrial plans for structures in California and Washington.</p>
     <br>
     <p>Other Work: 
     <br>
