--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -72,7 +72,9 @@ permalink: /dugan.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt118">Washington Hardware Company Remodel</a> </p>
     <br>
-    <p>Earl N. Dugan was born in Perry, Iowa and graduated from the University of Illinois in 1906. After working for a short while in Chicago and San Francisco, he arrived in Tacoma working independently as a draftsman. This led to partnerships with Sutton, Whitney and Dugan as well as Mock, Morrison and Dugan. Dugan was the founding member of the Tacoma Society of Architects and would sometimes use this platform to secure contracts through free consultation, as was the case for the Point Defiance Pavilion.</p>
+    <p>Earl N. Dugan was born in Perry, Iowa and graduated from the University of Illinois in 1906. After working for a short while in Chicago and San Francisco, he arrived in Tacoma working independently as a draftsman. 
+      This led to partnerships with <a href="https://aweymo.github.io/losttacoma/sutton.html"> Sutton</a> and <a href="https://aweymo.github.io/losttacoma/whitney.html">Whitney</a> as well as Mock and Morrison. 
+      Dugan was the founding member of the Tacoma Society of Architects and would sometimes use this platform to secure contracts through free consultation, as was the case for the <a href="https://aweymo.github.io/losttacoma/defiance.html">Point Defiance Pavilion</a>.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
