--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -61,7 +61,9 @@ permalink: /bassindale.html
     <br>
     <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA">N.P.B.A. Hospital</a></p>
     <br>
-    <p>Lambert Bassindale was born in Racine, Wisconsin in 1875 and graduated from the Chicago Art Institute. After moving to St. Paul in 1918 to partner with associate architect Charles Frost, Bassindale began a long career of designing structures for the Northern Pacific Railroad, including office buildings, Hospitals and Nursing Homes. The  Northern Pacific Beneficial Association Hospital was organized in 1882 and had seven hospitals spanning Minnesota to Tacoma, the westernmost facility.</p>
+    <p>Lambert Bassindale was born in Racine, Wisconsin in 1875 and graduated from the Chicago Art Institute. 
+      After moving to St. Paul in 1918 to partner with associate architect Charles Frost, Bassindale began a long career of designing structures for the Northern Pacific Railroad, including office buildings, Hospitals and Nursing Homes. 
+      The  Northern Pacific Beneficial Association Hospital was organized in 1882 and had seven hospitals spanning Minnesota to Tacoma, the westernmost facility.</p>
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -83,9 +85,11 @@ permalink: /bassindale.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_npba" alt="N.P.B.A. Hospital" style="max-width:100%;"></a>
     <br>
-    <sub>N.P.B.A. Hospital, TPL Historic Building Files (BU-10396), 
+    <sub>N.P.B.A. Hospital 
     <br>  
-    Courtesy Northwest Room</sub>
+    TPL Historic Building Files (BU-10396)
+    <br>  
+    Courtesy Tacoma Public Library Northwest Room</sub>
   </div>
 </div>
   
