--- a/pages/cornils.html
+++ b/pages/cornils.html
@@ -59,7 +59,7 @@ permalink: /cornils.html
     <em>1872-1964</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations:
+    <p><strong>Lost Tacoma Locations:</strong>
     <br>  
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt028">Carsten Packing Company Pork House</a>
     <br>
