--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -60,7 +60,7 @@ permalink: /dugan.html
     <em>1877-1956</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations:</strong>
     <br>  
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
     <br>
@@ -84,7 +84,7 @@ permalink: /dugan.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <p>Other Work: 
+    <p><strong>Other Work:</strong>
     <br> 
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/13872/rec/1">College of Puget Sound, Jones Hall, Tacoma, WA (1923-1924)</a>
     <br>
