--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -61,7 +61,7 @@ permalink: /ekvall.html
     <em>1895-1974</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>
     <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24 BROADWAY, TACOMA">City Hall</a> 
     <br>
@@ -69,7 +69,7 @@ permalink: /ekvall.html
     <br>
     <p>Architect George L. Ekvall was born in Tacoma, Washington in 1896 and certified as an architect in 1925. Ekvall was a member of the American Institute of Architects, the Olympia Lions Club and the Olympia Art League. Notable architectural work Ekvall was associated with was the Holy Rosary Catholic Church in Tacoma, the Federation Forest monument to the Washington State Federation of Women's Clubs and the Medical-Dental Tower, a proposed but never constructed Tacoma skyscraper.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
       <br>
       <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/16339/rec/5">Evelyn Apartments</a>
       <br>
