--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -56,7 +56,7 @@ permalink: /flickinger.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Harry E. Flickinger</b></p></h4>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">Garage for Jail and Public Safety Building</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">Garage for Jail and Public Safety Building</a></p>
     <br>
     <p>Harry E. Flickinger was a draftsman for the City of Tacoma in the 1940s. One of Flickinger's few appearances in the historical record was in a profile for the Tacoma Times with an accompanying photo by the Richards Studio of the designer sitting in front of a detailed custom model train set, with multiple electrical switchboards and a painted mountain background.</p>
     <br>
