--- a/pages/babcock.html
+++ b/pages/babcock.html
@@ -59,12 +59,12 @@ permalink: /babcock.html
     <em>1874-1928</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
     <br>
     <p>Everett Phipps Babcock was born in Tacoma and worked primarily with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> as Russell & Babcock. 
     In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
     <br>
     <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
     <br> 
