--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -56,7 +56,7 @@ permalink: /bachelor.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Arthur J. Bachelor</b></p></h4>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#4801-05 YAKIMA AVE S, TACOMA">Mission Theater</a></p>
+    <p><strong>Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#4801-05 YAKIMA AVE S, TACOMA">Mission Theater</a></p>
     <br>
     <p>The architect that drew up the plans for the Mission Theater in 1924 is unclear. 
       There is an Arthur J. Bachelor that was primarily active in Tacoma's photography community, but was also an active member of the Kiwanis Club, Tacoma Executive Association and the Tacoma Yacht Club. That said, 
