--- a/pages/flickinger.html
+++ b/pages/flickinger.html
@@ -58,7 +58,8 @@ permalink: /flickinger.html
     <br>
     <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt052">Garage for Jail and Public Safety Building</a></p>
     <br>
-    <p>Harry E. Flickinger was a draftsman for the City of Tacoma in the 1940s. One of Flickinger's few appearances in the historical record was in a profile for the Tacoma Times with an accompanying photo by the Richards Studio of the designer sitting in front of a detailed custom model train set, with multiple electrical switchboards and a painted mountain background.</p>
+    <p>Harry E. Flickinger was a draftsman for the City of Tacoma in the 1940s. 
+      One of Flickinger's few appearances in the historical record was in a profile for the Tacoma Times with an accompanying photo by the Richards Studio of the designer sitting in front of a detailed custom model train set.</p>
     <br>
     <sub>Sources: "Tacoma Times - July 23, 1940 - Page 4"</sub>
     <br>
