--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -65,7 +65,9 @@ permalink: /griffin.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
     <br>
-    <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. After moving to Seattle, Griffin formed a partnership with Irwin H. Hill, Arnott Woodroofe and later with Ernest T. Mock. When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
+    <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. 
+      After moving to Seattle, Griffin formed a partnership with  <a href="https://aweymo.github.io/losttacoma/hill.html">Irwin H. Hill</a>, Arnott Woodroofe and later with<a href="https://aweymo.github.io/losttacoma/mock.html"> Ernest T. Mock</a>. 
+      When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
     <br>
     <p>Other Work: 
     <br>  
@@ -86,7 +88,9 @@ permalink: /griffin.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
     <br>
-    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 1928-01-12, 
+    <sub>Roosevelt School 
+    <br>   
+    Marvin D. Boland Collection (BOLAND-B17893), 1928-01-12 
     <br> 
     Courtesy Northwest Room</sub>
     <br>
@@ -94,7 +98,9 @@ permalink: /griffin.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
     <br>
-    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926, 
+    <sub>Arlington Elementary School Addition
+      <br>   
+    TPL Historic Building Files (BU-11303), 12-11-1926
     <br>  
     Courtesy Northwest Room</sub>
     <br>
