--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -59,7 +59,7 @@ permalink: /griffin.html
     <em>1892-1951</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>  
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>
     <br>
@@ -69,7 +69,7 @@ permalink: /griffin.html
       After moving to Seattle, Griffin formed a partnership with  <a href="https://aweymo.github.io/losttacoma/hill.html">Irwin H. Hill</a>, Arnott Woodroofe and later with<a href="https://aweymo.github.io/losttacoma/mock.html"> Ernest T. Mock</a>. 
       When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
     <br>  
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/4192/rec/28">Fife Civic Auditorium</a>
     <br>
