--- a/pages/heath.html
+++ b/pages/heath.html
@@ -59,15 +59,19 @@ permalink: /heath.html
     <em>1861-1953</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>  
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt053">Hawthorne School</a> 
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">Edison School Annex</a></p>
     <br>
-    <p>Frederick Henry Heath was born in LaCrosse, Wisconsin in 1861 and graduated from Powell's Academy, a parochial institution created by Rev William R. Powell in Caledonia, Minnesota. Heath moved to Tacoma in 1893 and formed a partnership with Ambrose James Russell and A. Walter Spaulding in 1901. It was during this partnership that Heath would become the School Architect for the Tacoma School District from 1903 through 1920, when he had moved on to partner with George Gove and draftsman Herbert A. Bell as Heath, Gove & Bell. Towards the end of his life, Heath collaborated with his son Frederick Jr. to help promote and sell his invention, "Heath Cubes," a square, hollow tile building material.</p>
+    <p>Frederick Henry Heath was born in LaCrosse, Wisconsin in 1861 and graduated from Powell's Academy, a parochial institution created by Rev William R. Powell in Caledonia, Minnesota. 
+      Heath moved to Tacoma in 1893 and formed a partnership with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a>  and A. Walter Spaulding in 1901. 
+      It was during this partnership that Heath would become the School Architect for the Tacoma School District from 1903 through 1920, when he had moved on to partner with <a href="https://aweymo.github.io/losttacoma/gove.html">George Gove</a> 
+      and draftsman Herbert A. Bell as Heath, Gove & Bell. 
+      Towards the end of his life, Heath collaborated with his son Frederick Jr. to help promote and sell his invention, "Heath Cubes," a square, hollow tile building material.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a> 
     <br>
