--- a/pages/hec.html
+++ b/pages/hec.html
@@ -56,11 +56,11 @@ permalink: /hec.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Henschien Everds & Crombie</b></p></h4>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien Everds & Crombie">Carsten Packing Company Abattoir</a> </p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien Everds & Crombie">Carsten Packing Company Abattoir</a> </p>
     <br>
     <p>Henschien Everds & Crombie were a Chicago firm that specialized in designing meat packing companies that complied with USDA standards. The company worked primarily with east coast companies, including Oscar Meyer. </p>
     <br>
-    <p>Other Work: <a href="https://www.loc.gov/resource/hhh.ia0405.photos?st=gallery">Ruth Packing Company</a> </p>
+    <p><strong>Other Work:</strong> <a href="https://www.loc.gov/resource/hhh.ia0405.photos?st=gallery">Ruth Packing Company</a> </p>
     <br>
     <sub>"Library of Congress, Washington, D.C. 20540 USA." “Rath Packing Company, Sycamore Street between Elm & Eighteenth Streets, Waterloo, Black Hawk County, IA.”, “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - September 30, 1943 - Page 33,”, “The Argus - October 13, 1978”, “The Times Argus- November 2, 1980”</sub>
     <br>
