--- a/pages/hill.html
+++ b/pages/hill.html
@@ -59,7 +59,7 @@ permalink: /hill.html
     <em>1875-1928</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>    
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a>
     <br>    
@@ -69,7 +69,7 @@ permalink: /hill.html
     <br>
     <p>Irwin (sometimes Irwyn) Horatio Hill was born in Illinois and graduated from the University of Illinois and Chicago Art Institute. After moving to Tacoma in 1903, Hill partnered with George Bullard, then Woodroofe and Griffin, then Hill, Mock & Griffin and finally Mock & Morrison. Hill was a member of the Tacoma Park Board and the Tacoma Rotary Club.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a> 
+    <p><strong>Other Work:</strong> <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a> 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23337/rec/13">Pierce County Hospital</a> 
     <br>
@@ -87,14 +87,18 @@ permalink: /hill.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099"><img src="https://aweymo.github.io/losttacoma/objects/ ext_roosevelt" alt="Roosevelt School" style="max-width:100%;"></a>
     <br>
-    <sub>Roosevelt School, Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+    <sub>Roosevelt School 
+    <br>   
+    Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
     <br>  
     Courtesy Northwest Room</sub>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
     <br>
-    <sub>Arlington Elementary School Addition, TPL Historic Building Files (BU-11303), 12-11-1926
+    <sub>Arlington Elementary School Addition
+    <br>   
+    TPL Historic Building Files (BU-11303), 12-11-1926
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -104,15 +108,19 @@ permalink: /hill.html
     <div class="column left" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_01" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
-      <sub>Talmud Torah Synagogue, Richards Studio (D141770-15), 05-28-1964
+      <sub>Talmud Torah Synagogue
+      <br>   
+      Richards Studio (D141770-15), 05-28-1964
       <br>  
       Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_talmud_02" alt="Talmud Torah Synagogue" style="max-width:100%;"></a>
       <br>
-      <sub>Talmud Torah Synagogue, Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
-      <br>  
+      <sub>Talmud Torah Synagogue 
+      <br>   
+      Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
+      <br> 
       Courtesy Northwest Room</sub>
     </div>
   </div>
